# peico-reference-agent

./: .env.example  .gitignore  README.md  pyproject.toml
peico_agent/: __init__.py  adapter.py  cli.py  config.py  loop.py  model.py  prompts.py  world.py
peico_agent/tools/: __init__.py  read_tools.py  write_tools.py
peico_eval/: __init__.py  changeset.py  checks.py  orchestrator.py  runner.py  schema.py  simulator.py
peico_eval/tasks/: update_contact_email.yaml
